<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ejercicio02"
    android:background="@color/white">
    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/titulo2"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_marginBottom="30dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/title2"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:padding="30dp">
        <EditText
            android:id="@+id/nombres"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:layout_marginBottom="10dp"
            android:inputType="text"/>
        <EditText
            android:id="@+id/numero"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numero"
            android:layout_marginBottom="10dp"
            android:inputType="phone"/>
        <EditText
            android:id="@+id/productos"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/producto"
            android:layout_marginBottom="10dp"
            android:inputType="text"/>
        <EditText
            android:id="@+id/ciudad"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ciudad"
            android:layout_marginBottom="10dp"
            android:inputType="text"/>
        <EditText
            android:id="@+id/direction"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/direction"
            android:layout_marginBottom="10dp"
            android:inputType="text"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        android:text="@string/btn_registrar"/>

</androidx.constraintlayout.widget.ConstraintLayout>