<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ejercicio01"
    android:background="@color/black">

        <TextView
            android:id="@+id/titulo"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exam_02"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/white"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            app:layout_constraintTop_toTopOf="@+id/titulo"
            android:layout_margin="50dp"
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:cardBackgroundColor="#009688"
            app:cardCornerRadius="15dp">
        </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:weightSum="2">
        <Button
            android:id="@+id/btnMostrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mostrar"/>
        <Button
            android:id="@+id/btnOcultar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ocultar" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>